<resources>
    <string name="app_name">Prime Checker</string>
    <string name="action_settings">Settings</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="next">Next</string>
    <string name="title_activity_hint">HintActivity</string>
    <string name="title_activity_cheat">CheatActivity</string>
    <string name="hint">Hint</string>
    <string name="cheat">Cheat</string>

</resources>
