<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.paarth.atry.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#ace5ff"
    tools:ignore="Overdraw">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        android:id="@+id/tbutton"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/nbutton"
        android:background="#b4b4b4"
        tools:ignore="RelativeOverlap" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrect"
        android:id="@+id/fbutton"
        android:layout_alignTop="@+id/tbutton"
        android:layout_toEndOf="@+id/nbutton"
        android:background="#b4b4b4"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/nbutton"
        android:layout_below="@+id/tbutton"
        android:layout_centerHorizontal="true"
        android:background="#b4b4b4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questions"
        android:layout_above="@+id/tbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:textColor="#b9002c"
        android:textSize="36sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint"
        android:id="@+id/hint"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/nbutton"
        android:background="#b4b4b4"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat"
        android:id="@+id/cheat"
        android:layout_alignTop="@+id/hint"
        android:layout_alignStart="@+id/fbutton"
        android:background="#b4b4b4"
        />
</RelativeLayout>
